@@ -1,3 +1,14 @@
+2011-07-28  Pavel Feldman  <pfeldman@google.com>
+
+        Web Inspector: [protocol] methods where all parameters are optional should not require empty params object.
+        https://bugs.webkit.org/show_bug.cgi?id=65331
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/CodeGeneratorInspector.pm:
+        (generateBackendFunction):
+        (generateArgumentGetters):
+
 2011-08-01  Adam Barth  <abarth@webkit.org>
 
         application/json MIME type shouldn't cause warnings in <script> tags
